--- a/Myassistant/app/src/main/res/values/strings.xml
+++ b/Myassistant/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Myassistant</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="日程管理">日程管理</string>
+    <string name="闹钟">闹钟</string>
+    <string name="收支管理">收支管理</string>
 </resources>
